--- a/lib/generators/configurable_settings/templates/db/migrate/create_model_setting_definitions.rb.tt
+++ b/lib/generators/configurable_settings/templates/db/migrate/create_model_setting_definitions.rb.tt
@@ -1,9 +1,14 @@
-class Create<%= model_name %>SettingDefinitions < ActiveRecord::Migration[8.0]
+class Create<%= @model_name %>SettingDefinitions < ActiveRecord::Migration[7.0]
   def change
     create_table :<%= @defs_table %> do |t|
-      t.string :key,         null: false
-      t.string :data_type,   null: false
-      t.text   :default_value
+      t.string :key,          null: false
+      t.string :name,         null: false
+      t.integer :value_type,  null: false, default: 0
+
+      t.jsonb  :default_value
+      t.jsonb  :options
+      t.text   :description
+
       t.timestamps
     end
   end
