--- a/lib/generators/configurable_settings/templates/models/model_setting.rb.tt
+++ b/lib/generators/configurable_settings/templates/models/model_setting.rb.tt
@@ -1,6 +1,5 @@
 # frozen_string_literal: true
 
-class <%= model_name %>Setting < ApplicationRecord
-  belongs_to :<%= model_name.underscore %>
-  belongs_to :setting_definition, class_name: "<%= model_name %>SettingDefinition"
+class <%= @model_name %>Setting < ApplicationRecord
+  include ConfigurableSettings::Setting
 end
