Refactor configurable settings controllers and views to use @model_name variable consistently

--- a/lib/generators/configurable_settings/templates/controllers/model_setting_definitions_controller.rb.tt
+++ b/lib/generators/configurable_settings/templates/controllers/model_setting_definitions_controller.rb.tt
@@ -1,25 +1,23 @@
-# frozen_string_literal: true
-
 class <%= @model_name %>SettingDefinitionsController < ApplicationController
   before_action :set_definition, only: %i[show edit update destroy]
-  helper_method :model_name, :setting_definition_class
 
   def index
-    @definitions = setting_definition_class.all
+    @definitions = <%= @model_name %>SettingDefinition.all
   end
 
   def show; end
 
   def new
-    @definition = setting_definition_class.new
+    @definition = <%= @model_name %>SettingDefinition.new
   end
 
   def create
-    @definition = setting_definition_class.new(definition_params)
+    @definition = <%= @model_name %>SettingDefinition.new(definition_params)
+
     if @definition.save
-      redirect_to @definition, notice: "Definition created."
+      redirect_to @definition, notice: 'Definition created successfully.'
     else
-      render :new
+      render :new, status: :unprocessable_entity
     end
   end
 
@@ -27,32 +25,24 @@ class <%= @model_name %>SettingDefinitionsController < ApplicationController
 
   def update
     if @definition.update(definition_params)
-      redirect_to @definition, notice: "Definition updated."
+      redirect_to @definition, notice: 'Definition updated successfully.'
     else
-      render :edit
+      render :edit, status: :unprocessable_entity
     end
   end
 
   def destroy
     @definition.destroy
-    redirect_to "#{model_name.underscore}_setting_definitions_path", notice: "Deleted."
+    redirect_to polymorphic_path(:<%= @model_name.underscore %>_setting_definitions), notice: 'Definition deleted successfully.'
   end
 
   private
 
   def set_definition
-    @definition = setting_definition_class.find(params[:id])
+    @definition = <%= @model_name %>SettingDefinition.find(params[:id])
   end
 
   def definition_params
-    params.require(:<%= model_name.underscore %>_setting_definition).permit(:key, :data_type, :default_value)
-  end
-
-  def model_name
-    "<%= model_name %>"
-  end
-
-  def setting_definition_class
-    "#{model_name}SettingDefinition".constantize
+    params.require(:<%= @model_name.underscore %>_setting_definition).permit(:key, :name, :value_type, :default_value, :options, :description)
   end
 end
