--- a/lib/generators/configurable_settings/templates/controllers/model_settings_controller.rb.tt
+++ b/lib/generators/configurable_settings/templates/controllers/model_settings_controller.rb.tt
@@ -1,25 +1,23 @@
-# frozen_string_literal: true
-
 class <%= @model_name %>SettingsController < ApplicationController
   before_action :set_setting, only: %i[show edit update destroy]
-  helper_method :model_name, :setting_class
 
   def index
-    @settings = <%= model_name %>Setting.all
+    @settings = <%= @model_name %>Setting.all
   end
 
   def show; end
 
   def new
-    @setting = <%= model_name %>Setting.new
+    @setting = <%= @model_name %>Setting.new
   end
 
   def create
-    @setting = <%= model_name %>Setting.new(setting_params)
+    @setting = <%= @model_name %>Setting.new(setting_params)
+
     if @setting.save
-      redirect_to @setting, notice: "Setting created."
+      redirect_to @setting, notice: 'Setting created successfully.'
     else
-      render :new
+      render :new, status: :unprocessable_entity
     end
   end
 
@@ -27,32 +25,28 @@ class <%= @model_name %>SettingsController < ApplicationController
 
   def update
     if @setting.update(setting_params)
-      redirect_to @setting, notice: "Setting updated."
+      redirect_to @setting, notice: 'Setting updated successfully.'
     else
-      render :edit
+      render :edit, status: :unprocessable_entity
     end
   end
 
   def destroy
     @setting.destroy
-    redirect_to <%= model_name.underscore %>_settings_path, notice: "Deleted."
+    redirect_to polymorphic_path(:<%= @model_name.underscore %>_settings), notice: 'Setting deleted successfully.'
   end
 
   private
 
   def set_setting
-    @setting = <%= model_name %>Setting.find(params[:id])
+    @setting = <%= @model_name %>Setting.find(params[:id])
   end
 
   def setting_params
-    params.require(:<%= model_name.underscore %>_setting).permit(:<%= model_name.underscore %>_id, :setting_definition_id, :key, :value)
-  end
-
-  def model_name
-    "<%= model_name %>"
-  end
-
-  def setting_class
-    "#{model_name}Setting".constantize
+    params.require(:<%= @model_name.underscore %>_setting).permit(
+      :<%= @model_name.underscore %>_id,
+      :<%= @model_name.underscore %>_setting_definition_id,
+      value: {}
+    )
   end
 end
