--- a/lib/generators/configurable_settings/templates/views/model_setting_definitions/_form.html.erb.tt
+++ b/lib/generators/configurable_settings/templates/views/model_setting_definitions/_form.html.erb.tt
@@ -16,13 +16,28 @@
   </div>
 
   <div class="field">
-    <%%= f.label :data_type %><br>
-    <%%= f.text_field :data_type %>
+    <%%= f.label :name %><br>
+    <%%= f.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%%= f.label :value_type %><br>
+    <%%= f.number_field :value_type %>
   </div>
 
   <div class="field">
     <%%= f.label :default_value %><br>
-    <%%= f.text_area :default_value %>
+    <%%= f.text_area :default_value, rows: 3, placeholder: 'Enter JSON (e.g. {"foo":"bar"})' %>
+  </div>
+
+  <div class="field">
+    <%%= f.label :options %><br>
+    <%%= f.text_area :options, rows: 3, placeholder: 'Enter JSON array or object' %>
+  </div>
+
+  <div class="field">
+    <%%= f.label :description %><br>
+    <%%= f.text_area :description, rows: 3 %>
   </div>
 
   <div class="actions">
