--- a/lib/generators/configurable_settings/templates/views/model_setting_definitions/index.html.erb.tt
+++ b/lib/generators/configurable_settings/templates/views/model_setting_definitions/index.html.erb.tt
@@ -1,11 +1,14 @@
-<h1><%%= model_name %> Setting Definitions</h1>
+<h1><%= @model_name %> Setting Definitions</h1>
 
 <table>
   <thead>
     <tr>
       <th>Key</th>
-      <th>Data type</th>
-      <th>Default value</th>
+      <th>Name</th>
+      <th>Value Type</th>
+      <th>Default Value</th>
+      <th>Options</th>
+      <th>Description</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,11 +17,14 @@
     <%% @definitions.each do |definition| %>
       <tr>
         <td><%%= definition.key %></td>
-        <td><%%= definition.data_type %></td>
-        <td><%%= definition.default_value %></td>
+        <td><%%= definition.name %></td>
+        <td><%%= definition.value_type %></td>
+        <td><%%= definition.default_value.to_json %></td>
+        <td><%%= definition.options.to_json %></td>
+        <td><%%= definition.description %></td>
         <td><%%= link_to 'Show', definition %></td>
         <td><%%= link_to 'Edit', edit_polymorphic_path(definition) %></td>
-        <td><%%= link_to 'Destroy', definition, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%%= button_to 'Destroy', definition, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <%% end %>
   </tbody>
@@ -26,4 +32,4 @@
 
 <br>
 
-<%%= link_to 'New Setting Definition', new_polymorphic_path(@definitions.first || :"#{model_name.underscore}_setting_definition") %>
+<%%= link_to 'New Setting Definition', new_<%= @model_name.underscore %>_setting_definition_path %>
