--- a/lib/generators/configurable_settings/templates/views/model_setting_definitions/new.html.erb.tt
+++ b/lib/generators/configurable_settings/templates/views/model_setting_definitions/new.html.erb.tt
@@ -1,5 +1,5 @@
-<h1>New <%%= model_name %> Setting Definition</h1>
+<h1>New <%= @model_name %> Setting Definition</h1>
 
 <%%= render 'form' %>
 
-<%%= link_to 'Back', send("#{model_name.underscore}_setting_definitions_path") %>
+<%%= link_to 'Back', <%= @model_name.underscore %>_setting_definitions_path %>
