--- a/lib/generators/configurable_settings/templates/views/model_settings/edit.html.erb.tt
+++ b/lib/generators/configurable_settings/templates/views/model_settings/edit.html.erb.tt
@@ -1,5 +1,5 @@
-<h1>Edit <%%= model_name %> Setting</h1>
+<h1>Edit <%= @model_name %> Setting</h1>
 
 <%%= render 'form' %>
 
-<%%= link_to 'Back', send("#{model_name.underscore}_settings_path") %>
+<%%= link_to 'Back', <%= @model_name.underscore %>_settings_path  %>
