--- a/lib/generators/configurable_settings/templates/views/model_settings/index.html.erb.tt
+++ b/lib/generators/configurable_settings/templates/views/model_settings/index.html.erb.tt
@@ -1,11 +1,10 @@
-<h1><%%= model_name %> Settings</h1>
+<h1><%= @model_name %> Settings</h1>
 
 <table>
   <thead>
     <tr>
-      <th><%%= model_name %></th>
+      <th><%= @model_name %></th>
       <th>Setting definition</th>
-      <th>Key</th>
       <th>Value</th>
       <th colspan="3"></th>
     </tr>
@@ -14,13 +13,12 @@
   <tbody>
     <%% @settings.each do |setting| %>
       <tr>
-        <td><%%= setting.send("#{model_name.underscore}_id") %></td>
-        <td><%%= setting.setting_definition_id %></td>
-        <td><%%= setting.key %></td>
+        <td><%%= setting.<%= @model_name.underscore %>_id %></td>
+        <td><%%= setting.<%= @model_name.underscore %>_setting_definition_id %></td>
         <td><%%= setting.value %></td>
         <td><%%= link_to 'Show', setting %></td>
         <td><%%= link_to 'Edit', edit_polymorphic_path(setting) %></td>
-        <td><%%= link_to 'Destroy', setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%%= button_to 'Destroy', setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <%% end %>
   </tbody>
@@ -28,4 +26,4 @@
 
 <br>
 
-<%%= link_to 'New Setting', new_polymorphic_path(@settings.first || :"#{model_name.underscore}_setting") %>
+<%%= link_to 'New Setting', new_<%= @model_name.underscore %>_setting_path %>
