Add  enum to  ` model_setting_definition` and updated form to use select input for `value_type`

--- a/lib/generators/configurable_settings/templates/models/model_setting_definition.rb.tt
+++ b/lib/generators/configurable_settings/templates/models/model_setting_definition.rb.tt
@@ -1,3 +1,10 @@
 class <%= @model_name %>SettingDefinition < ApplicationRecord
   include ConfigurableSettings::Definition
+
+  enum :value_type, {
+    string: 0,
+    integer: 1,
+    boolean: 2,
+    json: 3
+  }
 end
