--- a/lib/generators/configurable_settings/templates/views/model_setting_definitions/_form.html.erb.tt
+++ b/lib/generators/configurable_settings/templates/views/model_setting_definitions/_form.html.erb.tt
@@ -22,7 +22,7 @@
 
   <div class="field">
     <%%= f.label :value_type %><br>
-    <%%= f.number_field :value_type %>
+    <%%= f.select :value_type, <%= @model_name %>SettingDefinition.value_types.keys.map { |k| [k.humanize, k] }, {}, class: "form-select" %>
   </div>
 
   <div class="field">
